// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for translationWords 1`] = `
<div
  id="groups-menu-filter"
  style={
    Object {
      "color": "var(--reverse-color)",
      "width": "100%",
    }
  }
>
  <div
    id="groups-menu-filter-top"
  >
    <span
      id="groups-menu-title"
    >
      Menu
    </span>
    <Glyphicon
      bsClass="glyphicon"
      glyph="filter"
      key="filter"
    />
  </div>
  <div
    id="groups-menu-filter-options"
  >
    <div
      className="option"
    >
      <span
        className="object-checkbox"
      >
        <input
          checked={true}
          name="showInvalidated"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="object-icon"
      >
        <InvalidatedIcon
          color="#fff"
          height={16}
          width={16}
        />
      </span>
      <span
        className="object-text"
      >
        Invalidated
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showBookmarks"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-icon"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="bookmark"
        />
      </span>
      <span
        className="option-text"
      >
        Bookmarks
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showSelections"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-icon"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="ok"
        />
      </span>
      <span
        className="option-text"
      >
        Selected
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showNoSelections"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-checkbox"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="ban-circle"
        />
      </span>
      <span
        className="option-text"
      >
        No Selection
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showVerseEdits"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-checkbox"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="pencil"
        />
      </span>
      <span
        className="option-text"
      >
        Verse edit
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showComments"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-checkbox"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="comment"
        />
      </span>
      <span
        className="option-text"
      >
        Comments
      </span>
    </div>
  </div>
</div>
`;

exports[`Tests for GroupsMenuFilter Test GroupsMenuFilter for wordAlignment 1`] = `
<div
  id="groups-menu-filter"
  style={
    Object {
      "color": "var(--reverse-color)",
      "width": 238,
    }
  }
>
  <div
    id="groups-menu-filter-top"
  >
    <span
      id="groups-menu-title"
    >
      Menu
    </span>
    <Glyphicon
      bsClass="glyphicon"
      glyph="filter"
      key="filter"
    />
  </div>
  <div
    id="groups-menu-filter-options"
  >
    <div
      className="option"
    >
      <span
        className="object-checkbox"
      >
        <input
          checked={true}
          name="showInvalidated"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="object-icon"
      >
        <InvalidatedIcon
          color="#fff"
          height={16}
          width={16}
        />
      </span>
      <span
        className="object-text"
      >
        Invalidated
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showBookmarks"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-icon"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="bookmark"
        />
      </span>
      <span
        className="option-text"
      >
        Bookmarks
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showSelections"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-icon"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="ok"
        />
      </span>
      <span
        className="option-text"
      >
        Selected
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showNoSelections"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-checkbox"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="ban-circle"
        />
      </span>
      <span
        className="option-text"
      >
        No Selection
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showVerseEdits"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-checkbox"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="pencil"
        />
      </span>
      <span
        className="option-text"
      >
        Verse edit
      </span>
    </div>
    <div
      className="option"
    >
      <span
        className="option-checkbox"
      >
        <input
          checked={true}
          name="showComments"
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="option-checkbox"
      >
        <Glyphicon
          bsClass="glyphicon"
          glyph="comment"
        />
      </span>
      <span
        className="option-text"
      >
        Comments
      </span>
    </div>
  </div>
</div>
`;
